prepped epro project box

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">Skills & Projects</h2>
+          <h2 class="section-heading">Skills</h2>
           <hr class="my-4">
         </div>
       </div>
@@ -135,6 +135,7 @@
             <h3 class="mb-3">Back-End</h3>
             <p class="text-muted mb-0">Node.js</p>
             <p class="text-muted mb-0">Express.js</p>
+            <p class="text-muted mb-0"> SQL</p>
             <p class="text-muted mb-0">PostgreSQL</p>
             <p class="text-muted mb-0"> Knex.js</p>
           </div>
@@ -150,7 +151,9 @@
         </div>
       </div>
     </div>
+
   </section>
+
 
   <!-- Coffee Ride Modal -->
 
@@ -194,6 +197,16 @@
 
   <!-- Coffee Ride Preview -->
   <section class="p-0" id="portfolio">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading portfolio-heading">Recent Projects</h2>
+          <p class="text-muted mb-0 hint-text">click images to see more</p>
+          <hr class="my-4 project-line">
+        </div>
+      </div>
+    </div>
+
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
@@ -213,6 +226,62 @@
               </div>
             </a>
         </div>
+
+<!-- e/pro preview -->
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href=# data-toggle="modal" data-target=".epro">
+              <img class="img-fluid" src="img/portfolio/thumbnails/epro_preview.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Full-Stack Project
+                  </div>
+                  <div class="project-name">
+                    E/pro
+                  </div>
+                  <br>
+                  <p>Fitness app that analyzes a woman’s cycle and birth control method to provide tailored nutrition and fitness recommendations.</p>
+                </div>
+              </div>
+            </a>
+        </div>
+
+        <!-- E/PRO Modal -->
+          <div class="modal fade epro" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">E/PRO</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                 <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                  <img class="mobile-screen-shot" src="./img/mappyhour_mobile.png" alt="screen_shot_mobile">
+                  <p>
+                    <strong>Technologies:</strong> Google API, Mocha, Chai, Supertest, Node.js, Express, Bcrypt, Knex.js, HTML5, CSS, JavaScript, jQuery, Materialize, PostgreSQL.
+                    <br><br> With MappyHour users can view Boulder Happy Hour deals through our interactive map and intuitive interface. Once logged in, bookmark multiple restaurants and rate them.
+                    <br><br> Users can filter the map to see what Happy Hours are available on specific days or browse through restaurant descriptions, deals, and their contact information.
+                  </p>
+                  <div class="links-group">
+                    <a href="http://mappyhour.herokuapp.com/index.html" target="_blank" class="project-link">Live Site</a>
+                    <a href="https://github.com/mafutomo/Q2-Project" target="_blank" class="project-link-second">GitHub Repo</a>
+                  </div>
+
+                  <img class="screen-shot" src="./img/mappyhour_ss1.png" alt="screen_shot_1">
+
+                  <div class="mobile-ss-container">
+                    <img class="mobile-screen-shot-mappy" src="./img/mapphour_mobile1.png" alt="screen_shot_2">
+
+
+                    <img class="mobile-screen-shot-mappy" src="./img/mappyhour_mobile2.png" alt="screen_shot_3">
+
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
 
 <!-- MappHour Modal -->
   <div class="modal fade mappyhour" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
@@ -269,21 +338,8 @@
               </div>
             </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Full-Stack Project
-                  </div>
-                  <div class="project-name">
-                    Coming February 2018
-                  </div>
-                </div>
-              </div>
-            </a>
-        </div>
+
+
 
         <!-- <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
