updated modal for epro

--- a/index.html
+++ b/index.html
@@ -257,26 +257,25 @@
                 </button>
                 </div>
                 <div class="modal-body">
-                  <img class="mobile-screen-shot" src="./img/mappyhour_mobile.png" alt="screen_shot_mobile">
+                  <img class="mobile-screen-shot" src="./img/epro_mobile.png" alt="screen_shot_mobile">
                   <p>
-                    <strong>Technologies:</strong> Google API, Mocha, Chai, Supertest, Node.js, Express, Bcrypt, Knex.js, HTML5, CSS, JavaScript, jQuery, Materialize, PostgreSQL.
-                    <br><br> With MappyHour users can view Boulder Happy Hour deals through our interactive map and intuitive interface. Once logged in, bookmark multiple restaurants and rate them.
-                    <br><br> Users can filter the map to see what Happy Hours are available on specific days or browse through restaurant descriptions, deals, and their contact information.
+                    <strong>Technologies:</strong> React.js, Material UI, D3 Visualization, Python, Flask, PostgreSQL, Node.js, Bcrypt, HTML5, CSS, JavaScript, jQuery
+                    <br><br> EPro is a training and nutrition app that analyzes a woman’s unique cycle and birth control method to provide taylored training and nutrition recommendations.
+                    <br><br> A user's estrogen and progesterone levels is plotted using D3 with taylored fitness and nutrition tips to compliment where they currently are in their cycle.
+                    <br><br>
+                    Fitness and nutrition tips are broken down into four categories: Performace, High-Intensity & Resistance, Aerobic, and Rest.
                   </p>
                   <div class="links-group">
-                    <a href="http://mappyhour.herokuapp.com/index.html" target="_blank" class="project-link">Live Site</a>
-                    <a href="https://github.com/mafutomo/Q2-Project" target="_blank" class="project-link-second">GitHub Repo</a>
+                    <a href="https://youtu.be/6R2zBbv5mqU" target="_blank" class="project-link">Live Site</a>
+                    <a href="https://github.com/mafutomo/E-Pro" target="_blank" class="project-link-second">GitHub Repo</a>
                   </div>
+                  <br>
 
-                  <img class="screen-shot" src="./img/mappyhour_ss1.png" alt="screen_shot_1">
+                  <img class="screen-shot" src="./img/epro_main_page.png" alt="main_page">
+                  <p class="pic-sub-title">User's Main Page</p>
 
-                  <div class="mobile-ss-container">
-                    <img class="mobile-screen-shot-mappy" src="./img/mapphour_mobile1.png" alt="screen_shot_2">
-
-
-                    <img class="mobile-screen-shot-mappy" src="./img/mappyhour_mobile2.png" alt="screen_shot_3">
-
-                  </div>
+                  <img class="screen-shot" src="./img/user_base_page.png" alt="screen_shot_1">
+                  <p class="pic-sub-title">User Base Analytics Page</p>
 
                 </div>
               </div>
