--- a/css/index.html
+++ b/css/index.html
@@ -25,7 +25,7 @@
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="./css/style.css" rel="stylesheet">
+  <link href="./css/main.css" rel="stylesheet">
 
 </head>
 
