updated description for epro

--- a/index.html
+++ b/index.html
@@ -261,12 +261,13 @@
                   <p>
                     <strong>Technologies:</strong> React.js, Material UI, D3 Visualization, Python, Flask, PostgreSQL, Node.js, Bcrypt, HTML5, CSS, JavaScript, jQuery
                     <br><br> EPro is a training and nutrition app that analyzes a woman’s unique cycle and birth control method to provide taylored training and nutrition recommendations.
-                    <br><br> A user's estrogen and progesterone levels is plotted using D3 with taylored fitness and nutrition tips to compliment where they currently are in their cycle.
                     <br><br>
-                    Fitness and nutrition tips are broken down into four categories: Performace, High-Intensity & Resistance, Aerobic, and Rest.
+                    Fitness and nutrition tips are broken down into four Phases: Performace, High-Intensity & Resistance, Aerobic, and Rest.
+                    <br><br> A user's estrogen and progesterone levels are plotted using D3 with taylored fitness and nutrition tips to compliment which phase they are currently in.
+
                   </p>
                   <div class="links-group">
-                    <a href="https://youtu.be/6R2zBbv5mqU" target="_blank" class="project-link">Live Site</a>
+                    <a href="http://epro-fitness.herokuapp.com/" target="_blank" class="project-link">Live Site</a>
                     <a href="https://github.com/mafutomo/E-Pro" target="_blank" class="project-link-second">GitHub Repo</a>
                   </div>
                   <br>
