updated epro typos and new links

--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
                     Full-Stack Project
                   </div>
                   <div class="project-name">
-                    E/pro
+                    E/Pro
                   </div>
                   <br>
-                  <p>Fitness app that analyzes a woman’s cycle and birth control method to provide tailored nutrition and fitness recommendations.</p>
+                  <p>Training app that analyzes a woman’s cycle and birth control method to provide tailored nutrition and fitness tips each week.</p>
                 </div>
               </div>
             </a>
@@ -260,15 +260,15 @@
                   <img class="mobile-screen-shot" src="./img/epro_mobile.png" alt="screen_shot_mobile">
                   <p>
                     <strong>Technologies:</strong> React.js, Material UI, D3 Visualization, Python, Flask, PostgreSQL, Node.js, Bcrypt, HTML5, CSS, JavaScript, jQuery
-                    <br><br> EPro is a training and nutrition app that analyzes a woman’s unique cycle and birth control method to provide taylored training and nutrition recommendations.
+                    <br><br> E/Pro analyzes a woman’s unique cycle and birth control method to provide tailored training and nutrition recommendations.
                     <br><br>
-                    Fitness and nutrition tips are broken down into four Phases: Performace, High-Intensity & Resistance, Aerobic, and Rest.
-                    <br><br> A user's estrogen and progesterone levels are plotted using D3 with taylored fitness and nutrition tips to compliment which phase they are currently in.
+                    Each woman's cycle is broken down into four Phases: Performace, High-Intensity & Resistance, Aerobic, and Rest.
+                    <br><br> A user's estrogen and progesterone levels are plotted using D3. Fitness and nutrition tips  are generated based on the phase they are currently in.
 
                   </p>
                   <div class="links-group">
-                    <a href="http://epro-fitness.herokuapp.com/" target="_blank" class="project-link">Live Site</a>
-                    <a href="https://github.com/mafutomo/E-Pro" target="_blank" class="project-link-second">GitHub Repo</a>
+                    <a href="https://e-pro-fitness.herokuapp.com/" target="_blank" class="project-link">Live Site</a>
+                    <a href="https://github.com/mafutomo/EPRO-Fitness" target="_blank" class="project-link-second">GitHub Repo</a>
                   </div>
                   <br>
 
