updated epro to include login cred and changed position of links. removed uncessary index and resume files

--- a/index.html
+++ b/index.html
@@ -168,16 +168,19 @@
         </div>
         <div class="modal-body">
           <img class="mobile-screen-shot" src="./img/coffee_ride_mobile.png" alt="screen_shot_mobile">
+
+          <div class="links-group">
+            <a href="http://thecoffeeride.mutomo.surge.sh/index.html" target="_blank" class="project-link">Live Site</a>
+            <a href="https://github.com/mafutomo/the_coffee_ride" target="_blank" class="project-link-second">GitHub Repo</a>
+          </div>
+          
           <p>
 
             <strong>Technologies:</strong> Stripe API, Local Storage, Mocha & Chai, HTML5, CSS, JavaScript, jQuery, Materialize.
             <br><br> I partnered with a local business in Boulder, CO called The Coffee Ride. With only a week to implement, I gathered requirements and created a full shop website offering the Coffee Ride's current selection of coffee roasts.
             <br><br> The purpose of this project was gain experience working with a client, harness my design skills, and create a beautiful, fully functioning website within a short timeframe.
           </p>
-          <div class="links-group">
-            <a href="http://thecoffeeride.mutomo.surge.sh/index.html" target="_blank" class="project-link">Live Site</a>
-            <a href="https://github.com/mafutomo/the_coffee_ride" target="_blank" class="project-link-second">GitHub Repo</a>
-          </div>
+
 
           <img class="screen-shot" src="./img/coffee_ride_ss1.png" alt="screen_shot_1">
           <p class="pic-sub-title">Landing Page</p>
@@ -258,18 +261,30 @@
                 </div>
                 <div class="modal-body">
                   <img class="mobile-screen-shot" src="./img/epro_mobile.png" alt="screen_shot_mobile">
-                  <p>
-                    <strong>Technologies:</strong> React.js, Material UI, D3 Visualization, Python, Flask, PostgreSQL, Node.js, Bcrypt, HTML5, CSS, JavaScript, jQuery
-                    <br><br> E/Pro analyzes a woman’s unique cycle and birth control method to provide tailored training and nutrition recommendations.
-                    <br><br>
-                    Each woman's cycle is broken down into four Phases: Performace, High-Intensity & Resistance, Aerobic, and Rest.
-                    <br><br> A user's estrogen and progesterone levels are plotted using D3. Fitness and nutrition tips  are generated based on the phase they are currently in.
-
-                  </p>
                   <div class="links-group">
                     <a href="https://e-pro-fitness.herokuapp.com/" target="_blank" class="project-link">Live Site</a>
                     <a href="https://github.com/mafutomo/EPRO-Fitness" target="_blank" class="project-link-second">GitHub Repo</a>
                   </div>
+                  <p>
+                    <strong>Technologies:</strong> React.js, Material UI, D3 Visualization, Python, Flask, PostgreSQL, Node.js, Bcrypt, HTML5, CSS, JavaScript, jQuery
+                    <br><br>
+                    E/Pro analyzes a woman’s unique cycle and birth control method to provide tailored training and nutrition recommendations.
+
+                    Each woman's cycle is broken down into four Phases: Performace, High-Intensity & Resistance, Aerobic, and Rest.
+                    <br><br> A user's estrogen and progesterone levels are plotted using D3. Fitness and nutrition tips  are generated based on the phase they are currently in.
+
+                    Use the following sample cridentials to explore:
+                    <div class="epro-list">
+
+                        <strong>Username:</strong> user@test.com
+                        <br>
+                        <strong>Password:</strong> password
+
+                    </div>
+
+
+                  </p>
+
                   <br>
 
                   <img class="screen-shot" src="./img/epro_main_page.png" alt="main_page">
@@ -295,15 +310,16 @@
         </div>
         <div class="modal-body">
           <img class="mobile-screen-shot" src="./img/mappyhour_mobile.png" alt="screen_shot_mobile">
+          <div class="links-group">
+            <a href="http://mappyhour.herokuapp.com/index.html" target="_blank" class="project-link">Live Site</a>
+            <a href="https://github.com/mafutomo/Q2-Project" target="_blank" class="project-link-second">GitHub Repo</a>
+          </div>
           <p>
             <strong>Technologies:</strong> Google API, Mocha, Chai, Supertest, Node.js, Express, Bcrypt, Knex.js, HTML5, CSS, JavaScript, jQuery, Materialize, PostgreSQL.
             <br><br> With MappyHour users can view Boulder Happy Hour deals through our interactive map and intuitive interface. Once logged in, bookmark multiple restaurants and rate them.
             <br><br> Users can filter the map to see what Happy Hours are available on specific days or browse through restaurant descriptions, deals, and their contact information.
           </p>
-          <div class="links-group">
-            <a href="http://mappyhour.herokuapp.com/index.html" target="_blank" class="project-link">Live Site</a>
-            <a href="https://github.com/mafutomo/Q2-Project" target="_blank" class="project-link-second">GitHub Repo</a>
-          </div>
+
 
           <img class="screen-shot" src="./img/mappyhour_ss1.png" alt="screen_shot_1">
 
