--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+  <link rel='icon' href='./favicon.ico' type='image/x-icon'/ >
+
   <!-- Custom fonts for this template -->
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -25,7 +27,9 @@
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="./css/main.css" rel="stylesheet">
+  <link href="./main.css" rel="stylesheet">
+
+
 
 </head>
 
@@ -110,9 +114,9 @@
             <i class="fa fa-4x fa-users text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Project Management</h3>
             <p class="text-muted mb-0">Software Implementations</p>
+            <p class="text-muted mb-0">Integration Projects</p>
             <p class="text-muted mb-0">Agile & Scrum</p>
             <p class="text-muted mb-0">Git Workflow</p>
-            <p class="text-muted mb-0">JIRA</p>
 
 
 
@@ -123,7 +127,7 @@
             <i class="fa fa-4x fa-paint-brush text-primary mb-3 sr-icons"></i>
             <h3 class="mb-3">Front-End</h3>
             <p class="text-muted mb-0">HTML5 & CSS</p>
-            <p class="text-muted mb-0">JavaScript</p>
+            <p class="text-muted mb-0">JavaScript & ES6</p>
             <p class="text-muted mb-0">AJAX</p>
             <p class="text-muted mb-0">jQuery</p>
             <p class="text-muted mb-0">React.js</p>
@@ -135,9 +139,9 @@
             <h3 class="mb-3">Back-End</h3>
             <p class="text-muted mb-0">Node.js</p>
             <p class="text-muted mb-0">Express.js</p>
-            <p class="text-muted mb-0"> SQL</p>
-            <p class="text-muted mb-0">PostgreSQL</p>
             <p class="text-muted mb-0"> Knex.js</p>
+            <p class="text-muted mb-0">SQL</p>
+            <p class="text-muted mb-0">PostgreSQL</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -173,7 +177,7 @@
             <a href="http://thecoffeeride.mutomo.surge.sh/index.html" target="_blank" class="project-link">Live Site</a>
             <a href="https://github.com/mafutomo/the_coffee_ride" target="_blank" class="project-link-second">GitHub Repo</a>
           </div>
-          
+
           <p>
 
             <strong>Technologies:</strong> Stripe API, Local Storage, Mocha & Chai, HTML5, CSS, JavaScript, jQuery, Materialize.
@@ -214,7 +218,7 @@
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href=# data-toggle="modal" data-target=".coffee-ride">
-              <img class="img-fluid" src="img/portfolio/thumbnails/josh_writing.jpeg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/josh_writing_mockup.jpeg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -233,7 +237,7 @@
 <!-- e/pro preview -->
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href=# data-toggle="modal" data-target=".epro">
-              <img class="img-fluid" src="img/portfolio/thumbnails/epro_preview.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/epro_preview_mockup.jpeg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
@@ -339,7 +343,7 @@
           <!-- MappHour Preview -->
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href=# data-toggle="modal" data-target=".mappyhour">
-              <img class="img-fluid" src="img/portfolio/thumbnails/mappyhour.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/thumbnails/mappyhour_mockup.jpeg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
