updated about me section and resume

--- a/index.html
+++ b/index.html
@@ -86,13 +86,16 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading text-white">Let's make something amazing together!</h2>
           <hr class="light my-4">
-          <p class="text-enlarge text-white mb-4 text-lite">I love building software.
+          <p class="text-enlarge text-white mb-4 text-lite">
+          I'm a Boulder based Web Developer with a strong background in Project Management, Agile environments, and user software training.
 
-          <br><br> I'm a Boulder based Web Developer with a strong background in IT Project Management and Agile environments.
+          <br><br> From traveling 90% of the year <span class="emphasize">training end-users</span> across the country to managing <span class="emphasize">integration projects </span>between clients and their pharmacy system, my customer-centric experiences has shaped how I build software.
 
-          <br><br>Here you can find my latest work.</p>
+          <br><br>As a <span class="emphasize">full-stack engineer</span>, I'm passionate about creating intuitive, practical applications so users can focus on what matters to them.
 
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <br><br>Here, you can see my latest projects:</p>
+
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Let's Go!</a>
         </div>
       </div>
     </div>
@@ -457,6 +460,8 @@
       </div>
     </div>
   </section>
+
+  <p class="copyright">&#9400; 2018 Melissa Utomo</p>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
