--- a/index.html
+++ b/index.html
@@ -87,11 +87,10 @@
           <h2 class="section-heading text-white">Let's make something amazing together!</h2>
           <hr class="light my-4">
           <p class="text-enlarge text-white mb-4 text-lite">
-          I'm a Boulder based Web Developer with a strong background in Project Management, Agile environments, and user software training.
 
-          <br><br> From traveling 90% of the year <span class="emphasize">training end-users</span> across the country to managing <span class="emphasize">integration projects </span>between clients and their pharmacy system, my customer-centric experiences has shaped how I build software.
+            From traveling 90% of the year <span class="emphasize">training end-users</span> on clinical software to project managing <span class="emphasize">integration projects </span>with 3rd party systems, my customer-centric experiences has shaped the way I code.
 
-          <br><br>As a <span class="emphasize">full-stack engineer</span>, I'm passionate about creating intuitive, practical applications so users can focus on what matters to them.
+            <br><br>As a <span class="emphasize">full-stack engineer</span>, I'm passionate about creating intuitive, practical applications so users can focus on what matters to them.
 
           <br><br>Here, you can see my latest projects:</p>
 
@@ -427,7 +426,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading">Let's Get In Touch!</h2>
+          <h2 class="section-heading">Let's Get In Touch</h2>
           <hr class="my-4">
         </div>
       </div>
